--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "assistino",
-  "version": "0.9.0",
-  "description": "assistant open ai",
-  "main": "main.js",
+  "version": "1.0.0",
+  "description": "A wrapper for the OpenAI Assistants API with multi-user support and cost optimization",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
-  "keywords": [
-    "open",
-    "ai",
-    "assistant",
-    "theard"
-  ],
-  "author": "brahim BIDI",
-  "license": "ISC",
+  "keywords": ["openai", "assistant", "ai", "chatbot"],
+  "author": "Brahim BIDI",
+  "license": "MIT",
   "dependencies": {
-    "openai": "^4.52.3",
-    "readline": "^1.3.0"
+    "openai": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "typescript": "^4.2.3"
   }
 }
